# zinc

./: .gitignore  README.md  flake.nix  pyproject.toml
tests/: test_status.py
tests/status/: fixtures.py  test_filesystem.py  test_job.py  test_pruning.py  test_replication.py  test_snapshot.py  test_snapshotting.py  test_status.py
tests/status/_data/: status_complete.json  status_inprogress.json  status_none.json
zinc/: __init__.py  api.py  console.py  status.py
zinc/static/: style.css
zinc/status/: __init__.py  filesystem.py  job.py  pruning.py  replication.py  snapshot.py  snapshotting.py  status.py
zinc/templates/: base.html  console.html  hello.html
