[tool.poetry]
name = "zinc"
version = "0.1.0"
description = "zrepl console"
authors = ["Jeff Hutchison <jeff@j3ff.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
